# SlModLoader

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindZLIB.cmake
code/include/Sl/Core/: Types.hpp
code/include/Sl/Plugins/: Interfaces.hpp
code/src/: Core.cpp  Core.hpp  FileSystem.hpp  Frontend.cpp  Frontend.hpp  Game.cpp  Game.hpp  GameModes.hpp  Ghidra.h  Input.cpp  Input.hpp  Jenkins.cpp  Jenkins.hpp  ModLoader.cpp  ModLoader.hpp  Native.cpp  Native.hpp  Networking.cpp  Networking.hpp  ResourceManager.cpp  ResourceManager.hpp  Savedata.hpp  SceneManager.cpp  SceneManager.hpp  Siff.cpp  Siff.hpp  Startup.cpp  dinput8.cpp
plugins/RemoveIntroCinematics/: CMakeLists.txt
plugins/RemoveIntroCinematics/src/: main.cpp
